--- a/src/main/webapp/prototype/user/pay.html
+++ b/src/main/webapp/prototype/user/pay.html
@@ -1,26 +1,18 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%
-String ctxPath = request.getContextPath();
-String basePath = request.getScheme()+"://"+request.getServerName()+":"+request.getServerPort()+ctxPath+"/";
-%>
 <!DOCTYPE html>
 <html>
 <head>
-	<base href="<%=basePath%>">
 	<meta charset="utf-8"/>
 	<title>Pay Your Order</title>
 	
-	<link rel="stylesheet" href="css/layout.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="../css/layout.css" type="text/css" media="screen" />
 	<!--[if lt IE 9]>
 	<link rel="stylesheet" href="css/ie.css" type="text/css" media="screen" />
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	<script src="js/jquery-1.5.2.min.js" type="text/javascript"></script>
-	<script src="js/hideshow.js" type="text/javascript"></script>
-	<script src="js/jquery.tablesorter.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="js/jquery.equalHeight.js"></script>
+	<script src="../js/jquery-1.5.2.min.js" type="text/javascript"></script>
+	<script src="../js/hideshow.js" type="text/javascript"></script>
+	<script src="../js/jquery.tablesorter.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="../js/jquery.equalHeight.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function() 
     	{ 
@@ -56,7 +48,6 @@ String basePath = request.getScheme()+"://"+request.getServerName()+":"+request.
 
 
 </head>
-<body>
 
 
 	<header id="header">
@@ -117,23 +108,12 @@ String basePath = request.getScheme()+"://"+request.getServerName()+":"+request.
 	
 	<section id="main" class="column">
 		
-		<article class="module width_full">
-			<header><h3>Sum</h3></header>
-			<div class="module_content" style="height:170px; text-align: center;">
-				<ul>
-					<c:forEach var="detail" items="${preorder.detail }">
-						<li>Concert:${preorder.concertId }  Area:<c:if test="${(detail.ticketId / 100) eq '1' }">East</c:if><c:if test="${(detail.ticketId / 100) eq '2' }">West</c:if><c:if test="${(detail.ticketId / 100) eq '3' }">North</c:if><c:if test="${(detail.ticketId / 100) eq '4' }">South</c:if>   Ticket:${detail.ticketId } Price:${detail.finalPrice } </li>
-					</c:forEach>
-				</ul>
-			</div>
-		</article>
-		
 		<article class="module width_half">
 			<header><h3>Sum</h3></header>
 			<div class="module_content" style="height:170px; line-height:170px; text-align: center;">
 
 				<span class="centre" style="font-size: 48px">
-					$ ${preorder.tPrice }
+					$ 29.99
 				</span>
 
 			</div>
